<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="50dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/inputMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_money"
            android:inputType="number" />

        <EditText
            android:id="@+id/inputInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_info" />

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <CheckBox
            android:id="@+id/bankCardChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with_bank_card" />

        <CheckBox
            android:id="@+id/mobilePhoneChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with_mobile_phone" />

        <CheckBox
            android:id="@+id/cashAddressChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with_address_cash" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>